# SMChess

./: .gitignore  LICENSE  README.md  pyproject.toml  render.yaml
src/: chess_logic.py  position_evaluator.py  puzzle_manager.py  server.py  state_manager.py  test_mcp_endpoints.py
system/: system_info.md  system_prompt.md
